# Voodoo_Automation_Framework

./: .env  README.md  pyproject.toml  runner.html
Data/: testdata.json
Helpers/: MySQL.py  VD_Connectors.py  Voodoo.py  control_curses.py  find.py  webscraper.py
Page/automationexercise_website/: pom.py
Page/generic/: generic_pom.py
Tests/: herokuapp_addremove_elements.py  herokuapp_dragndrop.py
__Tests__/Hard_Forum/: Test_friday_thread.py  post_friday_thread.py
__Tests__/ParaBank/: New_Customer_Login.py
__Tests__/Wedding_page/: test_submission.py
__Tests__/automationexercise/: register_user.py
__Tests__/herokuapp/: herokuapp_addremove_elements.py  herokuapp_dragndrop.py  herokuapp_login.py
