[tool.poetry]
name = "voodoo automation framework"
version = "0.1.0"
description = "Playwright based automation framework"
authors = ["Jeremy Huntsman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.31.1"
pytest-playwright = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
